/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.highlevel.applier;

import org.factcast.highlevel.projection.Projection;
import org.factcast.highlevel.serializer.EventSerializer;

import lombok.RequiredArgsConstructor;

@RequiredArgsConstructor
public class DefaultEventApplierFactory implements EventApplierFactory {

    final EventSerializer deser;

    public <A extends Projection> EventApplier<A> create(A projection) {
        return new DefaultEventApplier<>(deser, projection);
    }
}
