@startuml

title __APPLIER's Class Diagram__\n

  namespace org.factcast.highlevel {
    namespace applier {
      class org.factcast.highlevel.applier.DefaultEventApplier {
          {static} - cache : Map<Class<? extends Projection>, Map<FactSpecCoordinates, Dispatcher>>
          - dispatchInfo : Map<FactSpecCoordinates, Dispatcher>
          {static} - log : Logger
          + apply()
          + createFactSpecs()
          # DefaultEventApplier()
          {static} - collectMethods()
          {static} - createParameterTransformer()
          {static} - createSingleParameterTransformer()
          {static} - discoverDispatchInfo()
          {static} - discoverFactSpec()
          {static} - getRelevantClasses()
          {static} - getRelevantClasses()
          {static} - isEventHandlerMethod()
          {static} - resolveTargetObject()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      class org.factcast.highlevel.applier.DefaultEventApplier.CallTarget {
          - clazz : Class<?>
          + CallTarget()
          + clazz()
          + equals()
          + hashCode()
          + resolver()
          + toString()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      class org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher {
          - dispatchMethod : Method
          + Dispatcher()
          + deserializer()
          + dispatchMethod()
          + equals()
          + hashCode()
          + objectResolver()
          + parameterTransformer()
          + spec()
          + toString()
          ~ invoke()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      interface org.factcast.highlevel.applier.DefaultEventApplier.ParameterTransformer {
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      interface org.factcast.highlevel.applier.DefaultEventApplier.TargetObjectResolver {
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      class org.factcast.highlevel.applier.DefaultEventApplierFactory {
          + DefaultEventApplierFactory()
          + create()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      interface org.factcast.highlevel.applier.EventApplier {
          {abstract} + apply()
          {abstract} + createFactSpecs()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace applier {
      interface org.factcast.highlevel.applier.EventApplierFactory {
          {abstract} + create()
      }
    }
  }
  

  org.factcast.highlevel.applier.DefaultEventApplier .up.|> org.factcast.highlevel.applier.EventApplier
  org.factcast.highlevel.applier.DefaultEventApplier o-- org.factcast.highlevel.projection.Projection : projection
  org.factcast.highlevel.applier.DefaultEventApplier +-down- org.factcast.highlevel.applier.DefaultEventApplier.CallTarget
  org.factcast.highlevel.applier.DefaultEventApplier +-down- org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher
  org.factcast.highlevel.applier.DefaultEventApplier +-down- org.factcast.highlevel.applier.DefaultEventApplier.ParameterTransformer
  org.factcast.highlevel.applier.DefaultEventApplier +-down- org.factcast.highlevel.applier.DefaultEventApplier.TargetObjectResolver
  org.factcast.highlevel.applier.DefaultEventApplier.CallTarget o-- org.factcast.highlevel.applier.DefaultEventApplier.TargetObjectResolver : resolver
  org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher o-- org.factcast.highlevel.serializer.EventSerializer : deserializer
  org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher o-- org.factcast.highlevel.applier.DefaultEventApplier.TargetObjectResolver : objectResolver
  org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher o-- org.factcast.highlevel.applier.DefaultEventApplier.ParameterTransformer : parameterTransformer
  org.factcast.highlevel.applier.DefaultEventApplier.Dispatcher o-- org.factcast.core.spec.FactSpec : spec
  org.factcast.highlevel.applier.DefaultEventApplierFactory .up.|> org.factcast.highlevel.applier.EventApplierFactory
  org.factcast.highlevel.applier.DefaultEventApplierFactory o-- org.factcast.highlevel.serializer.EventSerializer : deser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
